<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.piyush.foodify.ui.fragments.HomeFragment"
        android:label="@string/home" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.piyush.foodify.ui.fragments.SearchFragment"
        android:label="@string/search" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.piyush.foodify.ui.fragments.CartFragment"
        android:label="@string/cart" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.piyush.foodify.ui.fragments.ProfileFragment"
        android:label="@string/profile" />

</navigation>